@@ -1031,6 +1031,38 @@ programmer
   usbpid = 0x2111;
 ;
 
+programmer
+  id    = "atmelice";
+  desc  = "Atmel-ICE (ARM/AVR) in JTAG mode";
+  type  = "jtagice3";
+  connection_type = usb;
+  usbpid = 0x2141;
+;
+
+programmer
+  id    = "atmelice_pdi";
+  desc  = "Atmel-ICE (ARM/AVR) in PDI mode";
+  type  = "jtagice3_pdi";
+  connection_type = usb;
+  usbpid = 0x2141;
+;
+
+programmer
+  id    = "atmelice_dw";
+  desc  = "Atmel-ICE (ARM/AVR) in debugWIRE mode";
+  type  = "jtagice3_dw";
+  connection_type = usb;
+  usbpid = 0x2141;
+;
+
+programmer
+  id    = "atmelice_isp";
+  desc  = "Atmel-ICE (ARM/AVR) in ISP mode";
+  type  = "jtagice3_isp";
+  connection_type = usb;
+  usbpid = 0x2141;
+;
+
 
 programmer
   id    = "pavr";
