@@ -33,6 +33,7 @@
 #define USB_DEVICE_JTAGICE3    0x2110
 #define USB_DEVICE_XPLAINEDPRO 0x2111
 #define USB_DEVICE_JTAG3_EDBG  0x2140
+#define USB_DEVICE_ATMEL_ICE   0x2141
 
 #define USB_VENDOR_FTDI        0x0403
 #define USB_DEVICE_FT2232      0x6010
